🔥firebase-Google Cloud Functions-init

--- a/src/app/components/users/academyadmin/subjects/addsubject/addsubject.component.html
+++ b/src/app/components/users/academyadmin/subjects/addsubject/addsubject.component.html
@@ -1,4 +1,6 @@
-<div class="h4" mat-dialog-title>{{ data.btnText }} Subject</div>
+<div class="h4" mat-dialog-title>
+  {{ data.btnText }} Subject for class {{ data.className }}
+</div>
 <div mat-dialog-content>
   <input
     type="text"
