--- a/src/app/components/users/academyadmin/subjects/subjects.component.html
+++ b/src/app/components/users/academyadmin/subjects/subjects.component.html
@@ -1,4 +1,16 @@
 <div class="animated fadeIn">
+  <div class="container row">
+    <mat-form-field>
+      <mat-select placeholder="Select class" [(ngModel)]="selectedClass">
+        <mat-option
+          *ngFor="let class of classes"
+          [value]="class.data.className"
+          (click)="updateSubjects(class.id)"
+          >{{ class.data.className }}</mat-option
+        >
+      </mat-select>
+    </mat-form-field>
+  </div>
   <div class="row">
     <div class="col-sm-6 col-md-4 col-lg-2 pb-4">
       <button
@@ -6,46 +18,49 @@
         tooltip="Add Subject"
         triggers="mouseenter:mouseleave"
         (click)="openDialog()"
+        [disabled]="!selectedClass"
       >
         <p class="display-1 text-dark">+</p>
         <!-- <span><i class="text-dark fa fa-plus display-4"></i></span> -->
       </button>
     </div>
-    <div
-      class="col-sm-6 col-md-4 col-lg-2 pb-4"
-      *ngFor="let subject of subjects"
-    >
-      <div class="card text-white bg-dark h-100">
-        <div class="card-header h3 p-2">
-          <button
-            class="btn btn-outline-danger border-0 float-right py-1 px-2"
-            tooltip="Delete Subject"
-            triggers="mouseenter:mouseleave"
-            (click)="deleteSubject(subject.id, subject.data.subjectName)"
-          >
-            <span><i class="fa fa-trash"></i> </span>
-          </button>
-          <button
-            class="btn btn-outline-info border-0 float-right py-1 px-2"
-            tooltip="Edit Subject"
-            triggers="mouseenter:mouseleave"
-            (click)="openDialog(subject.id, subject.data.subjectName)"
-          >
-            <span><i class="fa fa-edit"></i> </span>
-          </button>
-        </div>
-        <div class="card-body p-2">
-          <div class="d-flex h-100 justify-content-center">
-            <!-- <ul class="list-group list-group-flush">
-              <li class="list-group-item bg-dark p-1"> -->
-            <div class="d-flex align-items-center h3">
-              {{ subject.data.subjectName }}
+    <div *ngIf="selectedClass; then subjectCards"></div>
+    <ng-template #subjectCards>
+      <div
+        class="col-sm-6 col-md-4 col-lg-2 pb-4"
+        *ngFor="let subject of subjects"
+      >
+        <div class="card text-white bg-dark h-100">
+          <div class="card-header h3 p-2">
+            <button
+              class="btn btn-outline-danger border-0 float-right py-1 px-2"
+              tooltip="Delete Subject"
+              (click)="deleteSubject(subject.id, subject.data.subjectName)"
+            >
+              <span><i class="fa fa-trash"></i> </span>
+            </button>
+            <button
+              class="btn btn-outline-info border-0 float-right py-1 px-2"
+              tooltip="Edit Subject"
+              triggers="mouseenter:mouseleave"
+              (click)="openDialog(subject.id, subject.data.subjectName)"
+            >
+              <span><i class="fa fa-edit"></i> </span>
+            </button>
+          </div>
+          <div class="card-body p-2">
+            <div class="d-flex h-100 justify-content-center">
+              <!-- <ul class="list-group list-group-flush">
+                <li class="list-group-item bg-dark p-1"> -->
+              <div class="d-flex align-items-center h3">
+                {{ subject.data.subjectName }}
+              </div>
+              <!-- </li>
+              </ul> -->
             </div>
-            <!-- </li>
-            </ul> -->
           </div>
         </div>
       </div>
-    </div>
+    </ng-template>
   </div>
 </div>
