--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -15,7 +15,7 @@
   [sidebarToggler]="'lg'"
   [asideMenuToggler]="'lg'"
 >
-  <ul class="nav navbar-nav d-md-down-none">
+  <!-- <ul class="nav navbar-nav d-md-down-none">
     <li class="btn btn-outline-dark nav-item px-3 ml-2">
       <a class="nav-link" href="#">Start Class</a>
     </li>
@@ -25,14 +25,14 @@
     <li class="btn btn-outline-dark nav-item px-3 ml-2">
       <a class="nav-link" href="#">Enroll Teachers</a>
     </li>
-  </ul>
+  </ul> -->
   <ul class="nav navbar-nav ml-auto">
-    <li class="nav-item d-md-down-none">
+    <!-- <li class="nav-item d-md-down-none">
       <a class="nav-link" href="#"
         ><i class="icon-bell"></i
         ><span class="badge badge-pill badge-danger">10</span></a
       >
-    </li>
+    </li> -->
     <!-- <li class="nav-item d-md-down-none">
       <a class="nav-link" href="#"><i class="icon-list"></i></a>
     </li> -->
@@ -50,12 +50,7 @@
         dropdownToggle
         (click)="(false)"
       >
-        <img
-          src="assets/img/avatars/6.jpg"
-          class="img-avatar"
-          alt="admin@bootstrapmaster.com"
-        />
-        <p>User</p>
+        <img [src]="user?.photoURL" class="img-avatar" alt="Profile pic" />
       </a>
       <div
         class="dropdown-menu dropdown-menu-right"
@@ -108,7 +103,7 @@
     <ol class="breadcrumb">
       <app-breadcrumb></app-breadcrumb>
       <!-- Breadcrumb Menu-->
-      <li class="breadcrumb-menu d-md-down-none">
+      <!-- <li class="breadcrumb-menu d-md-down-none">
         <div
           class="btn-group"
           role="group"
@@ -122,7 +117,7 @@
             ><i class="icon-settings"></i> &nbsp;Settings</a
           >
         </div>
-      </li>
+      </li> -->
     </ol>
     <div class="container-fluid"><router-outlet></router-outlet></div>
     <!-- /.container-fluid -->
@@ -566,6 +561,14 @@
   </app-aside>
 </div>
 <app-footer>
-  <span><a href="#">Al-Taleem</a> &copy; 2018 COMSATS.</span>
-  <span class="ml-auto">Powered by <a href="#">COMSATS</a></span>
+  <span
+    ><a target="_blank" href="https://github.com/nodejs21/fyp2018/"
+      >Al-Taleem</a
+    >
+    &copy; 2018 COMSATS.</span
+  >
+  <span class="ml-auto"
+    >Powered by
+    <a target="_blank" href="https://www.comsats.edu.pk/">COMSATS</a></span
+  >
 </app-footer>
