--- a/src/app/components/users/teacher/teacherdashboard/teacherdashboard.component.html
+++ b/src/app/components/users/teacher/teacherdashboard/teacherdashboard.component.html
@@ -1,3 +1,14 @@
-<p>
-  teacherdashboard works!
-</p>
+<div class="animated fadeIn">
+  <div class="row">
+    <div class="col-sm-6 col-md-4 col-lg-2 pb-4">
+      <button
+        class="btn btn-sm btn-secondary border border-secondary btn-block h-100"
+        tooltip="Add Class"
+        triggers="mouseenter:mouseleave"
+        (click)="openDialog()"
+      >
+        <p class="display-1 text-dark">+</p>
+      </button>
+    </div>
+  </div>
+</div>
