Temp Changes before presentation night

--- a/src/app/components/users/academyadmin/academyadmindashboard/academyadmindashboard.component.html
+++ b/src/app/components/users/academyadmin/academyadmindashboard/academyadmindashboard.component.html
@@ -88,7 +88,7 @@
   </div>
 </div>
 
-<pre>
+<!-- <pre>
   * Logout Button 
   * Class Cards 
   * Profile Page 
@@ -99,4 +99,4 @@
   * Notifications
   * Requests Teacher Student 
   * Request Cards
-</pre>
+</pre> -->
