removed "-->" from default-layout.html

--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -1,7 +1,6 @@
 <app-header
   [fixed]="true"
   [navbarBrandFull]="{
-    
     src: 'assets/img/brand/logo.svg',
     width: 89,
     height: 25,
@@ -97,7 +96,7 @@
       [disabled]="sidebarMinimized"
     ></app-sidebar-nav>
     <app-sidebar-minimizer></app-sidebar-minimizer>
-  </app-sidebar> -->
+  </app-sidebar>
   <!-- Main content -->
   <main class="main">
     <!-- Breadcrumb -->
