Routings Added in users dashboards

--- a/src/app/components/users/academyadmin/requests/teacherrequests/teacherrequests.component.html
+++ b/src/app/components/users/academyadmin/requests/teacherrequests/teacherrequests.component.html
@@ -13,7 +13,7 @@
             Teacher Name
             <button
               class="btn btn-sm btn-outline-info float-right ml-2"
-              popover="View Profile"
+              matTooltip="View Profile"
               triggers="mouseenter:mouseleave"
             >
               <span><i class="fa fa-eye"></i> </span>
@@ -41,7 +41,7 @@
                 <div class="col-6">
                   <button
                     class="btn btn-sm btn-success form-control"
-                    popover="Accept"
+                    matTooltip="Accept"
                     triggers="mouseenter:mouseleave"
                   >
                     <span><i class="fa fa-check"></i> </span>
@@ -50,7 +50,7 @@
                 <div class="col-6">
                   <button
                     class="btn btn-sm btn-danger form-control"
-                    popover="Reject"
+                    matTooltip="Reject"
                     triggers="mouseenter:mouseleave"
                   >
                     <span><i class="fa fa-times"></i> </span>
