--- a/src/app/components/users/student/course/quizzes/quizzes.component.html
+++ b/src/app/components/users/student/course/quizzes/quizzes.component.html
@@ -9,14 +9,14 @@
     <div class="col-sm-12">
       <div class="card">
         <div class="card-header">
-          <h3 class="d-inline">Quizzes Details Page STUDENT</h3>
+          <h3 class="d-inline">Quizzes</h3>
         </div>
       </div>
       <div class="animated fadeIn">
         <div class="card">
           <div class="card-header" (click)="isCollapsed = !isCollapsed">
             <label for="className" class="font-weight-bold"
-              >Subject Name Here</label
+              >Subject Name</label
             >
           </div>
           <div
