--- a/src/app/components/account/signup/signup.component.html
+++ b/src/app/components/account/signup/signup.component.html
@@ -49,7 +49,9 @@
                   </div>
                   <div
                     class="invalid-feedback d-block"
-                    *ngIf="firstName.errors || lastName.errors"
+                    *ngIf="
+                      firstName.touched && (firstName.errors || lastName.errors)
+                    "
                   >
                     First and Last both names are required.
                   </div>
@@ -68,7 +70,10 @@
                       formControlName="email"
                     />
                   </div>
-                  <div class="invalid-feedback d-block" *ngIf="email.errors">
+                  <div
+                    class="invalid-feedback d-block"
+                    *ngIf="email.touched && email.errors"
+                  >
                     Email is required.
                   </div>
                   <div class="input-group mb-3">
@@ -116,8 +121,8 @@
                       [ngClass]="{
                         'is-valid': !confirmPassword.errors,
                         'is-invalid':
-                          (confirmPassword.errors && confirmPassword.touched) ||
-                          password.errors
+                          confirmPassword.touched &&
+                          (confirmPassword.errors || password.errors)
                       }"
                       placeholder="Repeat password"
                       formControlName="confirmPassword"
@@ -126,9 +131,10 @@
                   <div
                     class="invalid-feedback d-block"
                     *ngIf="
-                      (confirmPassword.errors &&
+                      confirmPassword.touched &&
+                      ((confirmPassword.errors &&
                         confirmPassword.errors.ConfirmPassword) ||
-                      password.errors
+                        password.errors)
                     "
                   >
                     Passwords do not match.
@@ -647,7 +653,7 @@
                         ></span>
                       </div>
                       <input
-                        type="number"
+                        type="text"
                         formControlName="academyName"
                         class="form-control"
                       />
@@ -662,7 +668,7 @@
                         ></span>
                       </div>
                       <input
-                        type="number"
+                        type="text"
                         formControlName="academyDescription"
                         class="form-control"
                       />
