--- a/src/app/components/users/academyadmin/students/students.component.html
+++ b/src/app/components/users/academyadmin/students/students.component.html
@@ -1,13 +1,113 @@
-<!-- <p>
-  Filters hongy, k classroom k students daikhna chaah ra, ya poori academy k
-  students ya kisi specific class k specific student ko daikhna chaah ra
+<div class="container">
+  <div class="row">
+    <div class="col-2">
+      <mat-form-field class="d-block">
+        <mat-select
+          placeholder="Select class"
+          [(ngModel)]="data.className"
+          disableRipple
+        >
+          <mat-option>None</mat-option>
+          <mat-option *ngFor="let class of classes" [value]="class">
+            {{ class }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="col-2">
+      <mat-form-field class="d-block">
+        <mat-select placeholder="Select classroom" [(ngModel)]="data.classRoom">
+          <mat-option>None</mat-option>
+          <mat-option *ngFor="let class of classes" [value]="class">
+            {{ class }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </div>
+  <div class="row">
+    <!-- <mat-form-field>
+      <input
+        matInput
+        (keyup)="applyFilter($event.target.value)"
+        placeholder="Filter"
+        class="d-block"
+      />
+    </mat-form-field> -->
+   
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Student Name</th>
+          <th>Date registered</th>
+          <th>Control</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Talha Khan</td>
+          <td>2019/01/01</td>
+          <td>
+            <button
+              class="btn btn btn-outline-info"
+              matTooltip="View Profile"
+              triggers="mouseenter:mouseleave"
+            >
+              <span><i class="fa fa-eye"></i> </span>
+            </button>
+          </td>
+        </tr>
+        <tr>
+          <td>Safi Ullah</td>
+          <td>2019/01/01</td>
+          <td>
+            <button
+              class="btn btn btn-outline-info"
+              matTooltip="View Profile"
+              triggers="mouseenter:mouseleave"
+            >
+              <span><i class="fa fa-eye"></i> </span>
+            </button>
+          </td>
+        </tr>
+        <tr>
+          <td>Tuba Azhar</td>
+          <td>2019/01/01</td>
+          <td>
+            <button
+              class="btn btn btn-outline-info"
+              matTooltip="View Profile"
+              triggers="mouseenter:mouseleave"
+            >
+              <span><i class="fa fa-eye"></i> </span>
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
-  * Students cards
-  * Student profile page
+    <!-- <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef>No.</th>
+        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+      </ng-container>
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      </ng-container>
+      <ng-container matColumnDef="weight">
+        <th mat-header-cell *matHeaderCellDef>Weight</th>
+        <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+      </ng-container>
+      <ng-container matColumnDef="symbol">
+        <th mat-header-cell *matHeaderCellDef>Symbol</th>
+        <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+      </ng-container>
 
-</p> -->
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table> -->
+  </div>
+</div>
 
-
-<p>
-  <label>Filters daalnay + Students list ki form mein show hongay </label>
-</p>
+<!-- <pre>{{ data | json }}</pre> -->
