--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -1,9 +1,9 @@
 <app-header
   [fixed]="true"
   [navbarBrandFull]="{
-    src: 'assets/img/brand/logo.svg',
-    width: 89,
-    height: 25,
+    width: 189,
+    height: 125,
+    src: 'assets/img/brand/Al-Taleem.svg',
     alt: 'CoreUI Logo'
   }"
   [navbarBrandMinimized]="{
