--- a/src/app/components/users/academyadmin/subjects/subjects.component.html
+++ b/src/app/components/users/academyadmin/subjects/subjects.component.html
@@ -28,7 +28,7 @@
     <ng-template #subjectCards>
       <div
         class="col-sm-6 col-md-4 col-lg-2 pb-4"
-        *ngFor="let subject of subjects"
+        *ngFor="let subject of subjectsSelectedClass"
       >
         <div
           class="card text-white bg-dark h-100"
