--- a/src/app/components/shared/searchacademy/searchacademy.component.html
+++ b/src/app/components/shared/searchacademy/searchacademy.component.html
@@ -21,6 +21,7 @@
             {{ academy.data.academyName }}
           </mat-option>
         </mat-autocomplete>
+        {{ this.selectedAcademyDetails.classes | json }}
       </form>
     </div>
     <div class="col-8">
