--- a/src/app/components/users/academyadmin/students/students.component.html
+++ b/src/app/components/users/academyadmin/students/students.component.html
@@ -2,11 +2,8 @@
   <div class="row">
     <div class="col-2">
       <mat-form-field class="d-block">
-        <mat-select
-          placeholder="Select class"
-          [(ngModel)]="data.className"
-          disableRipple
-        >
+        <!-- [(ngModel)]="data.className" -->
+        <mat-select placeholder="Select class" disableRipple>
           <mat-option>None</mat-option>
           <mat-option *ngFor="let class of classes" [value]="class">
             {{ class }}
@@ -16,7 +13,8 @@
     </div>
     <div class="col-2">
       <mat-form-field class="d-block">
-        <mat-select placeholder="Select classroom" [(ngModel)]="data.classRoom">
+        <!-- [(ngModel)]="data.classRoom" -->
+        <mat-select placeholder="Select classroom">
           <mat-option>None</mat-option>
           <mat-option *ngFor="let class of classes" [value]="class">
             {{ class }}
@@ -34,7 +32,7 @@
         class="d-block"
       />
     </mat-form-field> -->
-   
+
     <table class="table">
       <thead>
         <tr>
