--- a/src/app/components/users/teacher/course/assignments/addassignment/addassignment.component.html
+++ b/src/app/components/users/teacher/course/assignments/addassignment/addassignment.component.html
@@ -1,6 +1,6 @@
-<div class="container">
-  <div class="card">
-    <div class="card-body">
+
+  
+    <div class="card-body p-0">
       <form>
         <div>
           <div>
@@ -77,5 +77,5 @@
         </div>
       </form>
     </div>
-  </div>
-</div>
+  
+
