--- a/src/app/components/users/teacher/course/assignments/assignments.component.html
+++ b/src/app/components/users/teacher/course/assignments/assignments.component.html
@@ -1,87 +1,135 @@
-<!-- <p>
-  assignments works!
-</p> -->
-
 <!-- ******************************** ADD ASSIGNMENTS PAGE TEACHER *****************************-->
 <!-- ******************************** ADD ASSIGNMENTS PAGE TEACHER *****************************-->
 <!-- ******************************** ADD ASSIGNMENTS PAGE TEACHER *****************************-->
 <!-- ******************************** ADD ASSIGNMENTS PAGE TEACHER *****************************-->
 
-<div class="row">
-  <div class="col-sm-12">
-    <div class="card">
-      <div class="card-header">
-        <h3 class="d-inline">Add Assignments Page TEACHER</h3>
+<div class="col-sm-12">
+  <mat-card>
+    <div class="row">
+      <div class="col-sm-3">
+        <mat-form-field>
+          <mat-label>Posted/Submitted</mat-label>
+          <mat-select [(value)]="selected">
+            <mat-option>None</mat-option>
+            <mat-option value="option1">Posted</mat-option>
+            <mat-option value="option2">Submitted By Students</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="col-sm-3">
+        <mat-form-field>
+          <mat-label>Choose Class</mat-label>
+          <mat-select [(value)]="selected">
+            <mat-option>None</mat-option>
+            <mat-option value="option1">9</mat-option>
+            <mat-option value="option2">10</mat-option>
+            <mat-option value="option3">11</mat-option>
+            <mat-option value="option3">12</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="col-sm-3">
+        <mat-form-field>
+          <mat-label>Choose Subject</mat-label>
+          <mat-select [(value)]="selected">
+            <mat-option>None</mat-option>
+            <mat-option value="option1">Maths</mat-option>
+            <mat-option value="option2">Chemistry</mat-option>
+            <mat-option value="option3">Physics</mat-option>
+            <mat-option value="option3">Biology</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="col-sm-3">
+        <mat-form-field>
+          <mat-label>Assignment No</mat-label>
+          <mat-select [(value)]="selected">
+            <mat-option>None</mat-option>
+            <mat-option value="option1">Option 1</mat-option>
+            <mat-option value="option2">Option 2</mat-option>
+            <mat-option value="option3">Option 3</mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
     </div>
-    <div class="animated fadeIn">
-      <div class="card">
-        <div class="card-header">
-          <label for="className" class="font-weight-bold"
-            >Subject Name Here</label
-          >
-          <button
-            class="btn btn-oultine-warning float-right"
-            popover="Add"
-            triggers="mouseenter:mouseleave"
-          >
-            <span>
-              <i
-                class="text-warning fa fa-lg fa-plus"
-                (click)="openDialog()"
-              ></i>
-            </span>
-          </button>
-        </div>
-        <div>
-          <table
-            class="table table-striped table-hover table-responsive-sm table-responsive-md table-responsive-lg"
-          >
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>Title</th>
-                <th>Added On</th>
-                <th>Due Date</th>
-                <th>Total Marks</th>
-                <th class="text-center">Controls</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>Project Charter</td>
-                <td>2012/01/01</td>
-                <td>2012/01/01</td>
-                <td>10</td>
-                <td>
-                  <div class="pl-2 pr-2 text-center">
-                    <button class="btn p-0">
-                      <span popover="Edit" triggers="mouseenter:mouseleave">
-                        <i class="text-success fa fa-edit"></i
-                      ></span>
-                    </button>
-                    <button class="btn p-0 ml-2">
-                      <span popover="Delete" triggers="mouseenter:mouseleave">
-                        <i class="text-success fa fa-trash"></i>
-                      </span>
-                    </button>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+  </mat-card>
+
+  <hr />
+
+  <mat-card>
+    <div class="row">
+      <div class="col-6">
+        <mat-card-title>
+          Posted Assignments
+        </mat-card-title>
       </div>
+      <div class="col-6">
+        <button
+          mat-button
+          class="float-right btn btn-success"
+          (click)="openDialog()"
+        >
+          Post Assignment
+        </button>
+      </div>
+
+      <mat-form-field class="px-3">
+        <input
+          matInput
+          (keyup)="applyFilter($event.target.value)"
+          placeholder="Filter"
+        />
+      </mat-form-field>
+
+      <table mat-table [dataSource]="dataSource">
+        <!-- Position Column -->
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef><strong>No.</strong></th>
+          <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef><strong>Title</strong></th>
+          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="weight">
+          <th mat-header-cell *matHeaderCellDef><strong>Added On</strong></th>
+          <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="symbol">
+          <th mat-header-cell *matHeaderCellDef><strong>Due Date</strong></th>
+          <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="totalmarks">
+          <th mat-header-cell *matHeaderCellDef>
+            <strong>Total Marks</strong>
+          </th>
+          <td mat-cell *matCellDef="let element">{{ element.totalmarks }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="controls">
+          <th mat-header-cell *matHeaderCellDef><strong>Controls</strong></th>
+          <td mat-cell *matCellDef="let element">{{ element.controls }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
     </div>
-  </div>
+  </mat-card>
 </div>
 
 <!-- ******************************** SUBMITTED ASSIGNMENTS PAGE TEACHER *****************************-->
 <!-- ******************************** SUBMITTED ASSIGNMENTS PAGE TEACHER *****************************-->
 <!-- ******************************** SUBMITTED ASSIGNMENTS PAGE TEACHER *****************************-->
 <!-- ******************************** SUBMITTED ASSIGNMENTS PAGE TEACHER *****************************-->
-
+<hr />
 <div class="row">
   <div class="col-sm-12">
     <div class="card">
@@ -134,8 +182,7 @@
             </ul>
           </div>
         </div>
-        <div
-        >
+        <div>
           <table
             class="table table-striped table-hover table-responsive-sm table-responsive-md table-responsive-lg"
           >
